--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,6 +8,7 @@ body {
     font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
     /* color: var(--van-text-color);
     background-color: var(--color-background-2); */
+    position: relative;
 }
 
 html {
